# kursovaya_4

./: README.md  main.py  pyproject.toml
classes/: abstract.py  api_classes.py  hhru.py  json_interaction.py  jsonsaver.py  superjob.py  vacancy.py
data/: all_vacancies.json  suitable_vacancies.json  suitable_vacancies_by_response.json  vacancy.json  vacancy_top.json
main/: main.py  test.py
test/: test.py
