[tool.poetry]
name = "kursovaya-4"
version = "0.1.0"
description = ""
authors = ["Данила <spook9400@mail.ru>"]
readme = "README.md"
packages = [{include = "kursovaya_4"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
